VC4-Development-0.0.2-318
	* Fixed client crash bug on connecting to server
VC4-Development-0.0.2-319
	+ Server now does ticks once every 20 seconds
VC4-Development-0.0.2-320
	- Removed spawn control no players warning (spammed server log)
VC4-Development-0.0.2-321
	* Fixed crash bug when server tries to play sound
VC4-Development-0.0.2-322
	+ Server now tries to send all chunks to client
VC4-Development-0.0.2-323
	+ Added a task system to the server
VC4-Development-0.0.2-324
	* Task system now works instead of crashing
VC4-Development-0.0.2-325
	+ Added getblock command
VC4-Development-0.0.2-327
	* Attempted to fix extra 0s being written at the end of a chunk
VC4-Development-0.0.2-328
	* Fixed issues sending chunks
	+ Server now sends all its chunks to the client
VC4-Development-0.0.2-329
	* Fixed some crashes relating to the stone block
VC4-Development-0.0.2-330
	+ Added new SwitchInputStream and SwitchOutputStream for better multiplayer io
VC4-Development-0.0.2-331
	* Changed the way chunks are sent in multiplayer
VC4-Development-0.0.2-332
	* Fixed bugs with switch streams and inflate/deflate mode
VC4-Development-0.0.2-333
	* Optimised and fixed bugs in switch streams
VC4-Development-0.0.2-334
	* Fixed more bugs in Switch streams
VC4-Development-0.0.2-335
	* Fixed bug in writing chunk data to multiplayer
VC4-Development-0.0.2-336
	* Fixed bug causing deflater in SwitchOutputStream to not work
VC4-Development-0.0.2-337
	* Fixed bug in SwitchInputStream
VC4-Development-0.0.2-338
	+ Chunks recieved are now added to the world
	* recieved chunks are now set as populated so the (hopefully) render
VC4-Development-0.0.2-339
	* Client now calls world update method in multiplayer
VC4-Development-0.0.2-340
	* Downloaded BlockStores for multiplayer chunks are now inserted into the chunk
VC4-Development-0.0.3-341
	* Changed the dictionary system, dictionaryinfo now used to load dictionaries
	* This is necessary for the multiplayer update